--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.mysql-connector-java-8.0.15.jar=C:\\Users\\aacay\\Downloads\\mysql-connector-java-8.0.15\\mysql-connector-java-8.0.15\\mysql-connector-java-8.0.15.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\aacay\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
