--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -8,4 +8,4 @@ do.jar=true
 file.reference.mysql-connector-java-8.0.15.jar=/Users/aaronc/Documents/Github/mysql-connector-java-8.0.15.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/aaronc/Library/Application Support/NetBeans/8.2/build.properties
+user.properties.file=C:\\Users\\Owner\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
