--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
 compile.on.save=true
 <<<<<< HEAD
-file.reference.mysql-connector-java-8.0.15.jar=/Users/jagmeetcheema/Downloads/mysql-connector-java-8.0.15/mysql-connector-java-8.0.15.jar
+file.reference.mysql-connector-java-8.0.15.jar=/Users/aaronc/Documents/Github/mysql-connector-java-8.0.15.jar
 user.properties.file=/Users/jagmeetcheema/Library/Application Support/NetBeans/8.2/build.properties
 =======
 do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/jagmeetcheema/Library/Application Support/NetBeans/8.2/build.properties
+user.properties.file=/Users/aaronc/Library/Application Support/NetBeans/8.2/build.properties
